2007-10-22  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/fortran.el (fortran-mode-map, fortran-window-create):
	Use window-full-width-p.

2007-10-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* mail/vms-pmail.el (insert-signature): Don't use end-of-buffer.

	* tooltip.el: Use featurep 'xemacs.

	* printing.el: Move variable definitions before use, no code
	change.

2007-10-22  Juri Linkov  <juri@jurta.org>

	* simple.el (goto-history-element): Allow minibuffer-default to be
	a list of default values accessible by typing M-n in the minibuffer.

	* dired-x.el (dired-guess-shell-command): Put all guesses to the
	minibuffer default value list instead of pushing them temporarily
	to the history list.

2007-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/byte-opt.el (byte-optimize-featurep): Fix paren typo.

2007-10-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* w32-fns.el (w32-quote-process-args):
	* dos-w32.el (print-region-function, lpr-headers-switches)
	(ps-print-region-function): Pacify byte-compiler.

	* emulation/edt-mapper.el (function-key-map):
	(edt-map-key): Make it a function instead of using fset.
	Inline edt-gnu-map-key and edt-lucid-map-key.  Use featurep 'xemacs.
	(edt-gnu-map-key, edt-lucid-map-key): Remove.
	(edt-x-emacs-p): Remove.
	(edt-emacs-variant, edt-window-system, edt-xserver):
	Use featurep 'xemacs.

	* net/eudc.el: Use (featurep 'xemacs) instead of the string test.
	Replace eudc-xemacs-p with its definition.
	(eudc-xemacs-p, eudc-emacs-p, eudc-xemacs-mule-p)
	(eudc-emacs-mule-p): Remove.
	(eudc-install-menu, eudc-mode): Replace eudc-emacs-p and
	eudc-xemacs-p with feature tests.

	* net/eudc-bob.el (eudc-bob-generic-menu, eudc-bob-mail-keymap)
	(eudc-bob-url-keymap, eudc-bob-sound-keymap)
	(eudc-bob-generic-keymap, eudc-bob-popup-menu)
	(eudc-bob-toggle-inline-display):
	* net/eudc-hotlist.el (eudc-hotlist-emacs-menu):
	Replace eudc-emacs-p and eudc-xemacs-p with feature tests.

	* net/eudcb-ph.el (eudc-ph-open-session):